include rsvp link to next event

--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
 				<h2 class="centered">Events</h2>
 				<hr>
 				<br>
-				<div class="col-lg-offset-2 col-lg-8">
-					<p></p>
+				<div class="col-lg-offset-2 col-lg-8 centered">
+                   <p>
+                   We have talks every fourth Wednesday, our next event is June 24th, 2015 at 7pm. <br />Details will be announced soon.
+                   </p>
+                   <p><a href="http://www.meetup.com/NY-Haskell/events/222965983/" data-event="222965983" class="mu-rsvp-btn">RSVP</a></p>
 					<p></p>
 					<p></p>
 				</div><!-- col-lg -->
@@ -138,10 +141,6 @@
 			
 			<div class="row">
 				<h4 class="centered">Our events are posted on meetup</h4>
-				<br>
-				<div class="col-lg-offset-2 col-lg-8">
-
-				</div><!-- col -->
 				<hr>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -465,5 +464,6 @@
 	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
 	<script type="text/javascript" src="assets/js/jquery-func.js"></script>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/541522619002077648/api/mu.btns.js?id=n6bc15p4k9esfp98dengr6csqh";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
   </body>
 </html>
