--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			</div><!-- row -->
 			
 			<div class="row">
-				<h4 class="centered">Our events are posted on meetup</h4>
+				<h4 class="centered">Our recurring events are posted on meetup</h4>
 				<hr>
 			</div><!-- row -->
 		</div><!-- container -->
