contact us link

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<div class="col-lg-6">
 						<h2>Want to volunteer with us?</h2>
 						<p>Do you want to help us nurture the haskell community?</p>
-						<p><a class="btn btn-success">Contact Us</a></p>
+						<p><a class="btn btn-success" href="mailto:info@ny-haskell.org">Contact Us</a></p>
 					</div>					
 				</div><!-- row -->
 			</div>
