updated rsvp and header

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		<!-- ==== HEADERWRAP ==== -->
 	    <div id="headerwrap" id="home" name="home">
 			<header class="clearfix">
-                    <h1><img src="assets/img/nyhaskell.png" /></h1>
-	  		 		<p>NY Haskell Users Group</p>
+                    <h1><!--img src="assets/img/nyhaskell.png" /--></h1>
+                    <p><b>NY Haskell Users Group</b></p>
 	  		 		<p>A community of haskell developers</p>
 	  		</header>	    
 	    </div><!-- /headerwrap -->
@@ -131,9 +131,9 @@
 				<br>
 				<div class="col-lg-offset-2 col-lg-8 centered">
                    <p>
-                   We have talks every fourth Wednesday, our next event is June 24th, 2015 at 7pm. <br />Details will be announced soon.
+                   We have talks every fourth Wednesday, our next event is November 25th, 2015 at 7pm. <br />Details will be announced soon.
                    </p>
-                   <p><a href="http://www.meetup.com/NY-Haskell/events/222965983/" data-event="222965983" class="mu-rsvp-btn">RSVP</a></p>
+                   <p><a href="http://www.meetup.com/NY-Haskell/events/226667224/" data-event="226667224" class="mu-rsvp-btn">RSVP</a></p>
 					<p></p>
 					<p></p>
 				</div><!-- col-lg -->
@@ -163,9 +163,9 @@
 				<br>
 				<br>
 				<div class="col-lg-122 centered">
-					<h4><b>Gershom B</b>, <b>Doug B</b>, 
-                        <b>Evie B</b>, <b>Kat C</b>, <b>Ozgun A</b>
-                        <b>Rick M</b>, <b>Ryan T</b></h4>
+					<h4><b>Gershom Bazerman</b>, <b>Doug Beardsley</b>, 
+                        <b>Evie Brothwick</b>, <b>Kat Chuang</b>, <b>Ozgun Ataman</b>
+                        <b>Rick Minerich</b>, <b>Ryan Trinkle</b></h4>
                     <p>&nbsp;</p>
 				</div><!-- col-lg-3 -->
 
