--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ layout: default
         <br>
         <div class="col-lg-122 centered">
           <h4><b>Gershom Bazerman</b>, <b>Doug Beardsley</b>, 
-          <b>Evie Brothwick</b>, <b>Kat Chuang</b>, <b>Ozgun Ataman</b>
+          <b>Evie Brothwick</b>, <b>Kat Chuang</b>, <b>Ozgun Ataman</b>,
           <b>Rick Minerich</b>, <b>Ryan Trinkle</b></h4>
           <p>&nbsp;</p>
         </div><!-- col-lg-3 -->
