--- a/index.html
+++ b/index.html
@@ -225,30 +225,32 @@ layout: default
     <!-- ==== BLOG ==== -->
     <div class="container" id="blog" name="blog">
     <br>
-      <!--div class="row">
+      <div class="row">
         <br>
         <h1 class="centered">WE ARE PASSIONATE ABOUT HIGH QUALITY CODE</h1>
         <hr>
+        <h1 class="centered">Blog</h1>
         <br>
         <br>
-      </div--><!-- /row -->
+      </div><!-- /row -->
       
-      <!--div class="row">
+      <div class="row">
+      {% for post in site.posts %}
         <div class="col-lg-6 blog-bg">
           <div class="col-lg-4 centered">
           <br>
-            <p><img class="img img-circle" src="" width="60px" height="60px"></p>
-            <h4>Author</h4>
-            <h5>Published MMDD.</h5>
+            <p><img class="img img-circle" src="{{ post.authorimgurl }}" width="60px" height="60px"></p>
+            <h4><a href="{{ post.authorurl }}">{{ post.author }}</a></h4>
+            <h5>Published {{ post.date | date: '%h %-d, %I:%M%P' }}.</h5>
           </div>
           <div class="col-lg-8 blog-content">
-            <h2>Your Title Here</h2>
-            <p>Want to see your article here? Contact us today.</p>
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            <p>{{ post.excerpt }}</p>
             <p></p>
-            <p><a href="#" class="icon icon-link"> Read More</a></p>
+            <p><a href="{{ post.url }}" class="icon icon-link"> Read More</a></p>
             <br>
           </div>
-        </div--><!-- /col -->
+        </div><!-- /col -->
         
         <!--div class="col-lg-6 blog-bg">
           <div class="col-lg-4 centered">
@@ -265,7 +267,8 @@ layout: default
             <br>
           </div>
         </div--><!-- /col -->
-      <!--/div><!-- /row -->
+        {% endfor %}
+      </div><!-- /row -->
       <br>
       <br>
     </div><!-- /container -->
