slack invite page redirect

--- a/index.html
+++ b/index.html
@@ -83,11 +83,17 @@ layout: default
       </div><!-- row -->
       
       <div class="row">
-        <h4 class="centered">Our recurring events are posted on meetup</h4>
+        <h4 class="centered">Our recurring events are <a href="http://meetup.com/NY-Haskell">posted on meetup</a></h4>
+        <br>
+      </div><!-- row -->
+
+      <div class="row">
+        <h3 class="centered">Online Community</h3>
         <hr>
+        <br>
         <div class="col-lg-offset-3 col-lg-6 centered">
           <p class="text-centered">
-          Come chat with us in our new <a href="http://ny-haskell.herokuapp.com">slack team</a>!  Over 15 haskellers have already joined our team, chatting about the latest tools and news in the haskell world and the projects they're working on. To join our team visit our <a href="http://ny-haskell.herokuapp.com">Slack invite page</a> and we'll send you an invitation!
+          Come chat with us in our new <a href="http://ny-haskell.org/slack">slack team</a>!  Over 15 haskellers have already joined our team, chatting about the latest tools and news in the haskell world and the projects they're working on. To join our team visit our <a href="http://ny-haskell.org/slack">Slack invite page</a> and we'll send you an invitation!
         </p>
         </div>
       </div><!-- row -->
