retitle blog section

--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@ layout: default
     <br>
       <div class="row">
         <br>
-        <h1 class="centered">WE ARE PASSIONATE ABOUT HIGH QUALITY CODE</h1>
+        <h1 class="centered">NY Haskell Blog</h1>
         <hr>
-        <h1 class="centered">Blog</h1>
         <br>
         <br>
       </div><!-- /row -->
