generic hero bg img

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@ layout: default
 ---
   
     {% include nav.html %}
-  
+
     <!-- ==== HEADERWRAP ==== -->
       <div id="headerwrap" id="home" name="home">
       <header class="clearfix">
-                    <h1><!--img src="assets/img/nyhaskell.png" /--></h1>
-                    <p><b>NY Haskell Users Group</b></p>
-            <p>A community of haskell developers</p>
-        </header>     
+        <div class="container-fluid">
+          <div class="col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-7" style="background: rgba(0,0,0,0.4);    padding: 80px 20px;">
+            <h1><img src="assets/img/nyhaskell.png" height="90" /></h1>
+            <p><b>NY Haskell Users Group</b></p>
+            <p>A community of haskell developers<br/>&nbsp;</p>
+          </div>
+          </div>    
+        </header> 
       </div><!-- /headerwrap -->
 
     <!-- ==== GREYWRAP ==== -->
