--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ layout: default
       <div id="headerwrap" id="home" name="home">
       <header class="clearfix">
         <div class="container-fluid">
-          <div class="col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-7" style="background: rgba(0,0,0,0.4);    padding: 80px 20px;">
+          <div class="col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-7 form">
             <h1><img src="assets/img/nyhaskell.png" height="90" /></h1>
-            <p><b>NY Haskell Users Group</b></p>
-            <p>A community of haskell developers<br/>&nbsp;</p>
+            <p>NY Haskell Users Group</p>
+            <p>The largest community of haskellers in the world!<br/>&nbsp;</p>
           </div>
           </div>    
         </header> 
