--- a/index.html
+++ b/index.html
@@ -28,41 +28,9 @@ layout: default
     </section><!-- section -->
     {% include _events.html %}
 
-    <!-- ==== TEAM MEMBERS ==== -->
-    <div class="container" id="team" name="team">
-    <br>
-      <div class="row white centered">
-        <h1 class="centered">Organizers</h1>
-        <hr>
-        <br>
-        <br>
-        <div class="col-lg-122 centered">
-          <h4><b>Gershom Bazerman</b>, <b>Doug Beardsley</b>, 
-          <b>Evie Brothwick</b>, <b>Kat Chuang</b>, <b>Ozgun Ataman</b>,
-          <b>Rick Minerich</b>, <b>Ryan Trinkle</b></h4>
-          <p>&nbsp;</p>
-        </div><!-- col-lg-3 -->
 
-      </div><!-- row -->
-    </div><!-- container -->
+    {% include _team.html %}
 
-    <!-- ==== GREYWRAP ==== -->
-    <div id="greywrap">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 centered">
-            <img class="img-responsive" src="assets/img/nyhaskell.png" align="right">
-          </div>
-          <div class="col-lg-6">
-            <h2>Want to volunteer with us?</h2>
-            <p>Do you want to help us nurture the haskell community?</p>
-            <p><a class="btn btn-success" href="mailto:info@ny-haskell.org">Contact Us</a></p>
-          </div>          
-        </div><!-- row -->
-      </div>
-      <br>
-      <br>
-    </div><!-- greywrap -->
     
     <!-- ==== SECTION DIVIDER3 -->
     <section class="section-divider textdivider divider3">
